syntax = "proto3";

import "google/protobuf/empty.proto";
package audiostreamservice;

option java_multiple_files = false;
option java_package = "eu.ubitech.grcp";
option java_outer_classname = "AudioStreamService";

message ByteStream {
    bytes byte_chunk = 1;

}

service AudioStream {
    rpc SetAudioStream(stream ByteStream) returns (google.protobuf.Empty);
    rpc SetAudio(ByteStream) returns (google.protobuf.Empty);

}